# bot_backend_aiogram

./: .gitignore  README.md  docker-compose.yml  structure.mmd
bot_gateway/: Dockerfile  pyproject.toml
bot_gateway/src/bot_gateway/: __init__.py  main.py
bot_gateway/src/bot_gateway/api/: __init__.py
bot_gateway/src/bot_gateway/api/v1/: __init__.py  webhook.py
bot_gateway/src/bot_gateway/bot/: __init__.py  main.py
bot_gateway/src/bot_gateway/core/: __init__.py  config.py
bot_gateway/src/bot_gateway/grpc_clients/: __init__.py  auth_service_client.py
bot_gateway/src/bot_gateway/grpc_clients/protos/: __init__.py  auth.proto  auth_pb2_grpc.py
bot_gateway/tests/: __init__.py  test_main.py
nginx/: nginx.conf
